--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -1,16 +1,14 @@
 .contact-page {
     position: relative;
-    // padding-top: 100px;
-    // background-color: rgb(41, 45, 83);
-    &__breakpoints {
+    &__breadcrumbs {
         background-color: rgba(222, 222, 222, 0.7);
         position: absolute;
         top: 0;
         padding-top: 12px;
         padding-bottom: 14px;
         width: 100%;
-        .breakpoints__text a,
-        .breakpoints__text {
+        .breadcrumbs__text a,
+        .breadcrumbs__text {
             @extend %default-font;
             font-size: 14px;
             color: $default-color;
@@ -46,7 +44,8 @@
     }
 
     &__desc-content {
-        width: 825px;
+        max-width: 825px;
+        width: 100%;
         color: $default-color;
         align-self: flex-end;
     }
@@ -142,28 +141,29 @@
         cursor: pointer;
     }
 
-
-
     &-gallery {
         // padding-top: 5px;
         padding-bottom: 100px;
     }
-    .slick-list{
+    .slick-list {
         padding-bottom: 30px;
     }
 
     &-gallery__slide {
         position: relative;
         outline: none;
+        max-width: 300px;
+        width: 100%;
+        margin: 0 auto;
+        margin: 0 5px auto;
+
         &:hover .contact-page-gallery__slide-content {
             opacity: 0.6;
         }
     }
     &-gallery__image {
         margin: 0 auto;
-        width: 200px;
-        
-
+        width: 100%;
     }
 
     &-gallery__slide-content {
@@ -192,11 +192,7 @@
         color: $title-color;
         max-width: 160px;
         margin: 0 auto;
-
-        
     }
-
-
 
     .slick-dots {
         position: absolute;
