--- a/app/scss/_gallery.scss
+++ b/app/scss/_gallery.scss
@@ -16,7 +16,7 @@
         padding: 6px 16px;
         cursor: pointer;
         transition: 0.6s;
-        margin: 0 12px;
+        margin: 10px 12px;
         &:focus {
             border: 1px solid rgba(255, 238, 51, 0.5);
             color: $title-color;
